some new files added

--- a/JS_practice/index.html
+++ b/JS_practice/index.html
@@ -11,5 +11,14 @@
     <h1>JavaScript Demo</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt facere porro nulla perspiciatis cupiditate magni, non cumque nihil accusantium unde repudiandae illo totam quidem veritatis.</p>
     <button onclick="changeMessage(event)">Update</button>
+
+    <ul>
+        <li><a href="#">Lorem, ipsum.</a></li>
+        <li><a href="#">Animi, pariatur!</a></li>
+        <li><a href="#">Expedita, quaerat.</a></li>
+        <li><a href="#">Quam, exercitationem.</a></li>
+        <li><a href="#">Necessitatibus, officiis.</a></li>
+    </ul>
+    <button id="btn-uplink">update link</button>
 </body>
 </html>
