--- a/TechCrunch Login Clone/login.html
+++ b/TechCrunch Login Clone/login.html
@@ -33,29 +33,32 @@
             <form>
               <div class="form-function">
                 <label for="email">
-                  Email<span></span>
-                </label>
+                  Email address
+                </label><br>
                 <input id="email"  type="email" placeholder=" " autocomplete="none" autofocus="true" 
                 class="input-email" name="email" value=" " required>
                 <hr>
                 <button type="submit" class="btn-next">Next</button>
               </div>
+              <span class="helpers">
               <input id="Keep-sign-in" name="Keep sign in" value="Y" type="checkbox">
               <label for="Keep-sign-in"> Stay signed in</label>
               <a target="_blank" class="text-link" href="#">Fogot username?</a>
+              </span>
             </form>
             <button type="submit" class="btn-create-account">Create an account</button>
-            <br>
             <h5>Or , continue with</h5>
+          <div class="social-login">
           <div display="btn-wrapper">
               <button class="btn btn-yahoo">
                   <img src="https://www.freepnglogos.com/uploads/yahoo-logo-png/yahoo-logo-png-free-download-3.png" alt="yahoo logo">
               </button>
-          </div>
+            </div>
           <div display="btn-wrapper">
             <button class="btn btn-google">
                 <img src="https://www.freepnglogos.com/uploads/google-logo-png/google-logo-png-webinar-optimizing-for-success-google-business-webinar-13.png" alt="google logo">
             </button>
+          </div>
           </div>
         </div>
        </div>
@@ -63,7 +66,6 @@
         <a target="_blank"  href="#">Terms</a>
         <span>|</span>
         <a target="_blank" href="#">Privacy</a>
-
        </div>
        </div>
     </main>
